# Projet_10_SoftDesk

./: CHANGELOG.md  README.md  pyproject.toml  requirements.txt
Softdesk_API/: db.sqlite3  manage.py
Softdesk_API/Softdesk_API/: asgi.py  settings.py  urls.py  wsgi.py
Softdesk_API/authentication/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
Softdesk_API/authentication/migrations/: 0001_initial.py  0002_alter_customuser_date_of_birth.py  0003_alter_customuser_options_and_more.py  0004_remove_customuser_date_of_birth_must_be_in_past_and_more.py  0005_remove_customuser_votre_naissance_n_a_pas_encore_eu_lieu__and_more.py  0006_remove_customuser_votre_naissance_n_a_pas_encore_eu_lieu__and_more.py  0007_remove_customuser_votre_naissance_n_a_pas_encore_eu_lieu__and_more.py  0008_remove_customuser_votre_naissance_n_a_pas_encore_eu_lieu__and_more.py  0009_remove_customuser_la_date_de_naissance_doit_etre_dans_le_passé__and_more.py  0010_remove_customuser_la_date_de_naissance_doit_etre_dans_le_passé__and_more.py
Softdesk_API/comment/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
Softdesk_API/comment/migrations/: 0001_initial.py  0002_comment_title.py  0003_alter_comment_title.py
Softdesk_API/issue/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
Softdesk_API/issue/migrations/: 0001_initial.py  0002_alter_issue_title_alter_issue_type.py  (+3 more)
Softdesk_API/project/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
utils/: pytest.sh  requirements.freeze
(+5 files in other folders)
