[tool.poetry]
name = "Softdesk_API"
version = "0.1.0"
description = ""
authors = ["geo1310 <gbriche59@yahoo.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0.3"
djangorestframework = "^3.15.1"
djangorestframework-simplejwt = "^5.3.1"
black = "^24.3.0"
pycln = "^2.4.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
flake8-html = "^0.4.3"
drf-yasg = "^1.21.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
